--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <button id="prev">Wstecz</button>
     <div><img class="picContainer" src=""></div>
     <button id="next">Naprzód</button>
+    <div class="pictures"></div>
 
     <script type="text/javascript" src="main.js"></script>
 </body>
